# jira-github-mcp

./: .gitignore  README.md  README_AUTHENTICATION.md  SERVER_USAGE.md  WEBHOOK_SETUP_GUIDE.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  server_status.py  setup_webhook.py  test_auth_manual.py  test_mcp_client.py  test_webhook.py
src/: __init__.py  auth.py  config.py  github_client.py  jira_client.py  main.py  mcp_server.py  types.py  webhook_server.py
tests/: __init__.py  test_auth.py  test_config.py  test_jira_client.py
